background: now set in center top, no longer stretch to fit window, need wider background

--- a/brookers/css/style.css
+++ b/brookers/css/style.css
@@ -1,6 +1,7 @@
 body{
     background-image: url("../resources/images/Home/background.png");
-    background-size: cover;
+    background-size: auto;
+    background-position: center top;
     background-repeat:  no-repeat;
 }
 
